refactor(decorators): zQuery and zParam shares the same code instead of duplicating
