# apps/api/src/common/types/pagination.ts
@@ -1,7 +1,7 @@
 export type Pagination<T> = {
   items: T[];
   meta: {
-    totalItems: number;
+    total: number;
     limit: number;
     skipped: number;
     count: number;
